--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.0
   provider: ^6.0.1
+  salomon_bottom_bar: ^3.2.0
   youtube_player_iframe: ^2.2.2
 
 dev_dependencies:
